--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
     "guzzlehttp/guzzle": "5.*|6.*"
    },
    "require-dev": {
-        "phpunit/phpunit" : "4.*",
+        "phpunit/phpunit" : "4.*"
     }
 }
