--- a/maxtee/blockchain/composer.json
+++ b/maxtee/blockchain/composer.json
@@ -16,6 +16,11 @@
     "guzzlehttp/guzzle": "5.*|6.*"
    },
    "require-dev": {
-        "phpunit/phpunit" : "4.*",
+        "phpunit/phpunit" : "4.*"
+    },
+    "autoload": {
+        "psr-4": {
+          "Maxtee\\Blockchain\\": "src/"
+        }
     }
 }
