--- a/maxtee/blockchain/composer.json
+++ b/maxtee/blockchain/composer.json
@@ -11,12 +11,15 @@
     ],
     "minimum-stability": "stable",
     "require": {
-    "php": "^5.4.0|^7.0",
-    "illuminate/support": "5.*",
-    "guzzlehttp/guzzle": "5.*|6.*"
+        "php": "^5.4.0|^7.0",
+        "illuminate/support": "5.*",
+        "guzzlehttp/guzzle": "5.*|6.*"
    },
    "require-dev": {
-        "phpunit/phpunit" : "4.*"
+        "phpunit/phpunit" : "4.*",
+        "scrutinizer/ocular": "~1.1",
+        "satooshi/php-coveralls": "^0.7.0",
+        "mockery/mockery": ">=0.7.2"
     },
     "autoload": {
         "psr-4": {
